--- a/clase_t_1.ipynb
+++ b/clase_t_1.ipynb
@@ -78,11 +78,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "89b48db9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1130 entries, 0 to 1129\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   train    1130 non-null   int64  \n",
+      " 1   age      1130 non-null   int64  \n",
+      " 2   educ     1130 non-null   int64  \n",
+      " 3   black    1130 non-null   int64  \n",
+      " 4   hisp     1130 non-null   int64  \n",
+      " 5   married  1130 non-null   int64  \n",
+      " 6   earn96   1130 non-null   float64\n",
+      " 7   unem96   1130 non-null   int64  \n",
+      " 8   earn98   1130 non-null   float64\n",
+      " 9   unem98   1130 non-null   int64  \n",
+      "dtypes: float64(2), int64(8)\n",
+      "memory usage: 88.4 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
