--- a/clase_t_1.ipynb
+++ b/clase_t_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b14002a6",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "89b48db9",
    "metadata": {},
    "outputs": [
@@ -114,6 +114,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "46c06124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['train'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "297a32bd",
    "metadata": {},
    "outputs": [],
    "source": []
