--- a/clase_t_1.ipynb
+++ b/clase_t_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b14002a6",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "0      0   37    11      1     0        1     0.0       1  1.617924       0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "89b48db9",
    "metadata": {},
    "outputs": [
@@ -112,18 +112,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "46c06124",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "train\n",
+       "0    0.667257\n",
+       "1    0.332743\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['train'].value_counts(normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "297a32bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 earn98   R-squared:                       0.016\n",
+      "Model:                            OLS   Adj. R-squared:                  0.015\n",
+      "Method:                 Least Squares   F-statistic:                     17.91\n",
+      "Date:                Tue, 16 Sep 2025   Prob (F-statistic):           2.50e-05\n",
+      "Time:                        19:32:44   Log-Likelihood:                -3905.0\n",
+      "No. Observations:                1130   AIC:                             7814.\n",
+      "Df Residuals:                    1128   BIC:                             7824.\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         10.6099      0.279     37.970      0.000      10.062      11.158\n",
+      "train         -2.0501      0.484     -4.232      0.000      -3.001      -1.100\n",
+      "==============================================================================\n",
+      "Omnibus:                       95.786   Durbin-Watson:                   1.596\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               47.707\n",
+      "Skew:                           0.331   Prob(JB):                     4.37e-11\n",
+      "Kurtosis:                       2.241   Cond. No.                         2.41\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Definir la variable dependiente (Y) y la independiente (X)\n",
+    "Y = df['earn98']\n",
+    "X = df['train']\n",
+    "\n",
+    "# Agregar una constante para el intercepto\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Ajustar el modelo de regresión\n",
+    "model = sm.OLS(Y, X).fit()\n",
+    "\n",
+    "# Mostrar el resumen de la regresión\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "955b8972",
    "metadata": {},
    "outputs": [],
    "source": []
