--- a/clase_t_1.ipynb
+++ b/clase_t_1.ipynb
@@ -191,11 +191,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "955b8972",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 earn98   R-squared:                       0.387\n",
+      "Model:                            OLS   Adj. R-squared:                  0.385\n",
+      "Method:                 Least Squares   F-statistic:                     177.6\n",
+      "Date:                Tue, 16 Sep 2025   Prob (F-statistic):          5.99e-118\n",
+      "Time:                        19:34:23   Log-Likelihood:                -3637.4\n",
+      "No. Observations:                1130   AIC:                             7285.\n",
+      "Df Residuals:                    1125   BIC:                             7310.\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          4.5986      1.162      3.958      0.000       2.319       6.878\n",
+      "train          2.0896      0.438      4.771      0.000       1.230       2.949\n",
+      "age           -0.1424      0.018     -7.943      0.000      -0.178      -0.107\n",
+      "educ           0.4026      0.065      6.231      0.000       0.276       0.529\n",
+      "earn96         0.3907      0.019     20.968      0.000       0.354       0.427\n",
+      "==============================================================================\n",
+      "Omnibus:                       16.833   Durbin-Watson:                   2.061\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               17.411\n",
+      "Skew:                           0.302   Prob(JB):                     0.000166\n",
+      "Kurtosis:                       2.927   Cond. No.                         243.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Definir la variable dependiente (Y) y la independiente (X)\n",
+    "Y = df['earn98']\n",
+    "X = df[['train', 'age', 'educ', 'earn96']]\n",
+    "\n",
+    "# Agregar una constante para el intercepto\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Ajustar el modelo de regresión\n",
+    "model = sm.OLS(Y, X).fit()\n",
+    "\n",
+    "# Mostrar el resumen de la regresión\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b2eba9b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 earn98   R-squared:                       0.387\n",
+      "Model:                            OLS   Adj. R-squared:                  0.385\n",
+      "Method:                 Least Squares   F-statistic:                     177.6\n",
+      "Date:                Tue, 16 Sep 2025   Prob (F-statistic):          5.99e-118\n",
+      "Time:                        19:38:22   Log-Likelihood:                -3637.4\n",
+      "No. Observations:                1130   AIC:                             7285.\n",
+      "Df Residuals:                    1125   BIC:                             7310.\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          9.2324      0.232     39.814      0.000       8.777       9.687\n",
+      "train          2.0896      0.438      4.771      0.000       1.230       2.949\n",
+      "dmage         -0.1424      0.018     -7.943      0.000      -0.178      -0.107\n",
+      "dmeduc         0.4026      0.065      6.231      0.000       0.276       0.529\n",
+      "dmearn96       0.3907      0.019     20.968      0.000       0.354       0.427\n",
+      "==============================================================================\n",
+      "Omnibus:                       16.833   Durbin-Watson:                   2.061\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               17.411\n",
+      "Skew:                           0.302   Prob(JB):                     0.000166\n",
+      "Kurtosis:                       2.927   Cond. No.                         30.3\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Calcular medias\n",
+    "mage = df[\"age\"].mean()\n",
+    "meduc = df[\"educ\"].mean()\n",
+    "mearn96 = df[\"earn96\"].mean()\n",
+    "\n",
+    "# Generar variables centradas (demeaned)\n",
+    "df[\"dmage\"] = df[\"age\"] - mage\n",
+    "df[\"dmeduc\"] = df[\"educ\"] - meduc\n",
+    "df[\"dmearn96\"] = df[\"earn96\"] - mearn96\n",
+    "\n",
+    "# Definir variables independientes\n",
+    "X = df[[\"train\", \"dmage\", \"dmeduc\", \"dmearn96\"]]\n",
+    "X = sm.add_constant(X)  # añade el intercepto como Stata lo hace por defecto\n",
+    "\n",
+    "# Variable dependiente\n",
+    "y = df[\"earn98\"]\n",
+    "\n",
+    "# Estimar la regresión\n",
+    "model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "print(model.summary())"
+   ]
   }
  ],
  "metadata": {
