--- a/clase_t_1.ipynb
+++ b/clase_t_1.ipynb
@@ -313,6 +313,146 @@
     "\n",
     "print(model.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cd5ceb5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lo único que se altera es la constante. Iguales impactos en obs y no obs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "aa9dcfa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 earn98   R-squared:                       0.392\n",
+      "Model:                            OLS   Adj. R-squared:                  0.388\n",
+      "Method:                 Least Squares   F-statistic:                     103.3\n",
+      "Date:                Tue, 16 Sep 2025   Prob (F-statistic):          1.31e-116\n",
+      "Time:                        19:41:18   Log-Likelihood:                -3632.8\n",
+      "No. Observations:                1130   AIC:                             7282.\n",
+      "Df Residuals:                    1122   BIC:                             7322.\n",
+      "Df Model:                           7                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          5.4427      1.406      3.871      0.000       2.684       8.202\n",
+      "train          2.9271      0.538      5.438      0.000       1.871       3.983\n",
+      "age           -0.1616      0.022     -7.333      0.000      -0.205      -0.118\n",
+      "educ           0.4133      0.079      5.255      0.000       0.259       0.568\n",
+      "earn96         0.3693      0.020     18.414      0.000       0.330       0.409\n",
+      "Tdmage         0.0623      0.038      1.650      0.099      -0.012       0.136\n",
+      "Tdmeduc       -0.0322      0.137     -0.234      0.815      -0.302       0.237\n",
+      "Tdmearn96      0.1432      0.054      2.665      0.008       0.038       0.249\n",
+      "==============================================================================\n",
+      "Omnibus:                       16.214   Durbin-Watson:                   2.073\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               16.721\n",
+      "Skew:                           0.297   Prob(JB):                     0.000234\n",
+      "Kurtosis:                       2.963   Cond. No.                         293.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ahora se permite diferencia de impacto entre obs y no obs.\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Supongamos que ya definiste df y calculaste mage, meduc, mearn96 como antes\n",
+    "df[\"dmage\"] = df[\"age\"] - df[\"age\"].mean()\n",
+    "df[\"dmeduc\"] = df[\"educ\"] - df[\"educ\"].mean()\n",
+    "df[\"dmearn96\"] = df[\"earn96\"] - df[\"earn96\"].mean()\n",
+    "\n",
+    "# Crear interacciones\n",
+    "df[\"Tdmage\"] = df[\"train\"] * df[\"dmage\"]\n",
+    "df[\"Tdmeduc\"] = df[\"train\"] * df[\"dmeduc\"]\n",
+    "df[\"Tdmearn96\"] = df[\"train\"] * df[\"dmearn96\"]\n",
+    "\n",
+    "# Definir X y y según tu especificación\n",
+    "X = df[[\"train\", \"age\", \"educ\", \"earn96\", \"Tdmage\", \"Tdmeduc\", \"Tdmearn96\"]]\n",
+    "X = sm.add_constant(X)  # intercepto como en Stata\n",
+    "\n",
+    "y = df[\"earn98\"]\n",
+    "\n",
+    "# Estimar el modelo\n",
+    "model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "038af1ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    1130.000000\n",
+      "mean        2.927066\n",
+      "std         1.658098\n",
+      "min         0.278459\n",
+      "25%         1.528930\n",
+      "50%         2.642693\n",
+      "75%         4.363625\n",
+      "max         7.574343\n",
+      "Name: tau, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Subconjuntos\n",
+    "df1 = df[df[\"train\"] == 1].copy()\n",
+    "df0 = df[df[\"train\"] == 0].copy()\n",
+    "\n",
+    "# Modelo para train==1\n",
+    "X1 = sm.add_constant(df1[[\"age\", \"educ\", \"earn96\"]])\n",
+    "y1 = df1[\"earn98\"]\n",
+    "model1 = sm.OLS(y1, X1).fit()\n",
+    "\n",
+    "# Modelo para train==0\n",
+    "X0 = sm.add_constant(df0[[\"age\", \"educ\", \"earn96\"]])\n",
+    "y0 = df0[\"earn98\"]\n",
+    "model0 = sm.OLS(y0, X0).fit()\n",
+    "\n",
+    "# Predicciones para TODOS los datos, usando cada modelo\n",
+    "X_all = sm.add_constant(df[[\"age\", \"educ\", \"earn96\"]])\n",
+    "df[\"yhat1\"] = model1.predict(X_all)   # lo que predeciría el modelo con train==1\n",
+    "df[\"yhat0\"] = model0.predict(X_all)   # lo que predeciría el modelo con train==0\n",
+    "\n",
+    "# Diferencia\n",
+    "df[\"tau\"] = df[\"yhat1\"] - df[\"yhat0\"]\n",
+    "\n",
+    "# Resumen estadístico de tau\n",
+    "print(df[\"tau\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41a87e28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
