--- a/clase_t_1.ipynb
+++ b/clase_t_1.ipynb
@@ -448,11 +448,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "41a87e28",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Treatment Effect (ATE): 2.92706582663996\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "import numpy as np\n",
+    "\n",
+    "# Subconjuntos\n",
+    "df1 = df[df[\"train\"] == 1].copy()\n",
+    "df0 = df[df[\"train\"] == 0].copy()\n",
+    "\n",
+    "# Modelo para train==1\n",
+    "X1 = sm.add_constant(df1[[\"age\", \"educ\", \"earn96\"]])\n",
+    "y1 = df1[\"earn98\"]\n",
+    "model1 = sm.OLS(y1, X1).fit()\n",
+    "\n",
+    "# Modelo para train==0\n",
+    "X0 = sm.add_constant(df0[[\"age\", \"educ\", \"earn96\"]])\n",
+    "y0 = df0[\"earn98\"]\n",
+    "model0 = sm.OLS(y0, X0).fit()\n",
+    "\n",
+    "# Predicciones para todos los individuos bajo ambos escenarios\n",
+    "X_all = sm.add_constant(df[[\"age\", \"educ\", \"earn96\"]])\n",
+    "df[\"yhat1\"] = model1.predict(X_all)  # resultado potencial si tratado\n",
+    "df[\"yhat0\"] = model0.predict(X_all)  # resultado potencial si no tratado\n",
+    "\n",
+    "# Efecto individual\n",
+    "df[\"tau\"] = df[\"yhat1\"] - df[\"yhat0\"]\n",
+    "\n",
+    "# Estimador ATE\n",
+    "ATE = df[\"tau\"].mean()\n",
+    "\n",
+    "print(\"Average Treatment Effect (ATE):\", ATE)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "334f265d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamaño de muestra requerido por grupo: 964.11\n",
+      "Tamaño total: 1928.22\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.power import TTestIndPower\n",
+    "\n",
+    "# parámetros\n",
+    "mean1 = 3000\n",
+    "mean2 = 3200\n",
+    "sd1 = 1500\n",
+    "sd2 = 1500\n",
+    "alpha = 0.05\n",
+    "power = 0.9\n",
+    "\n",
+    "# diferencia de medias\n",
+    "diff = abs(mean2 - mean1)\n",
+    "\n",
+    "# desviación estándar combinada (para dos muestras independientes con tamaños iguales)\n",
+    "pooled_sd = ((sd1**2 + sd2**2) / 2) ** 0.5\n",
+    "\n",
+    "# tamaño del efecto (Cohen's d)\n",
+    "effect_size = diff / pooled_sd\n",
+    "\n",
+    "# inicializar objeto\n",
+    "analysis = TTestIndPower()\n",
+    "\n",
+    "# calcular tamaño de muestra por grupo\n",
+    "n_per_group = analysis.solve_power(effect_size=effect_size,\n",
+    "                                   alpha=alpha,\n",
+    "                                   power=power,\n",
+    "                                   alternative='larger')  # unilateral\n",
+    "\n",
+    "print(f\"Tamaño de muestra requerido por grupo: {n_per_group:.2f}\")\n",
+    "print(f\"Tamaño total: {2*n_per_group:.2f}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e2b95a79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamaño de muestra grupo 1: 723.03\n",
+      "Tamaño de muestra grupo 2: 1446.05\n",
+      "Tamaño total: 2169.08\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.power import TTestIndPower\n",
+    "\n",
+    "# parámetros\n",
+    "mean1 = 3000\n",
+    "mean2 = 3200\n",
+    "sd1 = 1500\n",
+    "sd2 = 1500\n",
+    "alpha = 0.05\n",
+    "power = 0.9\n",
+    "ratio = 2  # n2 = 2 * n1\n",
+    "\n",
+    "# diferencia de medias\n",
+    "diff = abs(mean2 - mean1)\n",
+    "\n",
+    "# desviación estándar combinada\n",
+    "pooled_sd = ((sd1**2 + sd2**2) / 2) ** 0.5\n",
+    "\n",
+    "# tamaño del efecto (Cohen's d)\n",
+    "effect_size = diff / pooled_sd\n",
+    "\n",
+    "# inicializar análisis\n",
+    "analysis = TTestIndPower()\n",
+    "\n",
+    "# calcular n1\n",
+    "n1 = analysis.solve_power(effect_size=effect_size,\n",
+    "                          alpha=alpha,\n",
+    "                          power=power,\n",
+    "                          alternative='larger',\n",
+    "                          ratio=ratio)\n",
+    "\n",
+    "# calcular n2\n",
+    "n2 = n1 * ratio\n",
+    "\n",
+    "print(f\"Tamaño de muestra grupo 1: {n1:.2f}\")\n",
+    "print(f\"Tamaño de muestra grupo 2: {n2:.2f}\")\n",
+    "print(f\"Tamaño total: {n1+n2:.2f}\")\n"
+   ]
   }
  ],
  "metadata": {
