--- a/clase_t_4.ipynb
+++ b/clase_t_4.ipynb
@@ -1,16 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c8c609a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
